Fix Maven wrapper permissions